# VeloxOS

./: .gitignore  CMakeLists.txt  limine.conf  linker.ld  main.c
arch/: hal.c  hal.h
arch/x86_64/: gdt.S  gdt.c  gdt.h  gdt_idt.S  idt.S  idt.c  idt.h  init.c  irq.c  irq.h  isr.h  isr_handler.c  tss.h
arch/x86_64/cpu/: acpi.c  acpi.h  apic.c  apic.h  ioapic.c  ioapic.h  madt.c  madt.h  percpu.h  smp.c  vendor.h
arch/x86_64/cpu/drivers/block/: xhci.c
arch/x86_64/drivers/IO/: nvme.c  ps2_keyboard.c  ps2_keyboard.h
arch/x86_64/drivers/block/: nvme.c  nvme.h  pci.c  pci.h
arch/x86_64/drivers/block/virtio/: vblk.c  vblk.h
arch/x86_64/lib/: spinlock.S
boot/: boot.c  boot.h
drivers/: tty.c
fs/: fat32.c  fat32.h
fs/partition/: gpt.c  gpt.h
fs/vfs/: fat32_vfs.c  fat32_vfs.h  vfs.c  vfs.h
include/: drivers.h  elf64.h  elf_loader.h  font.h  kmalloc.h  libk.h  printk.c  printk.h  spinlock.h
kernel/: acpi.c  cpu.c  drivers.c  fb.c  helpers.h  init.h  ipi.c  ipi.h  main.c  memory.c  panic.c  panic.h  sched.c  sched.h
lib/: elf64.c  string.c  string.h
limine/: BOOTAA64.EFI  BOOTIA32.EFI  BOOTLOONGARCH64.EFI  BOOTRISCV64.EFI  BOOTX64.EFI  limine-bios-hdd.h  limine-bios.sys  limine.c
mm/: kmalloc.c  paging.S  paging.c  paging.h  pmm.c  pmm.h  vmalloc.c  vmalloc.h
